# OrderEntrySystem

./: .gitignore  Makefile  Readme.txt  gemini_change_review.txt  gemini_codebase_bundle.txt  gemini_orderpool_review.txt  stability_bounds.csv  stress_test.py  visualize.py
desktop-ui/: Cargo.toml  README.md
desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
desktop-ui/src-tauri/capabilities/: default.json
desktop-ui/src-tauri/src/: main.rs
desktop-ui/ui/: Cargo.toml  Trunk.toml  index.html
desktop-ui/ui/src/: ipc.rs  lib.rs  types.rs
desktop-ui/ui/src/components/: chart.rs  health.rs  mod.rs  order_entry.rs  price_ladder.rs  toasts.rs
include/: order.hpp  order_book.hpp  price_level.hpp  types.hpp
scripts/: invest_expand_allocation_table.csv  invest_expand_optimize.py  invest_expand_simulation_geometric.csv  invest_expand_simulation_left_skew_normal.csv  invest_expand_simulation_lognormal.csv  invest_expand_simulation_results.csv
src/: main.cpp  order_book.cpp  price_level.cpp
